--- a/office_emp_proj/emp_app/templates/add_emp.html
+++ b/office_emp_proj/emp_app/templates/add_emp.html
@@ -22,6 +22,9 @@
           <input type="text" id="last_name" name="last_name" value="{{last_name}}"><br>
           <label for="dept">Department</label><br>
           <input type="text" id="dept" name="dept" value="{{dept}}"><br>
+
+          
+
           <label for="salary">Salary</label><br>
           <input type="number" id="salary" name="salary" value="{{salary}}"><br>
           <label for="bonus">Bonus</label><br>
@@ -29,7 +32,7 @@
           <label for="role">Role</label><br>
           <input type="text" id="role" name="role" value="{{role}}"><br>
           <label for="phone">Phone Number</label><br>
-          <input type="number" id="phone" name="phone" value="{{phone}}"><br>
+          <input type="number" maxlength="10" id="phone" name="phone" value="{{phone}}"><br>
           <hr>
           <button type="submit" class="btn btn-primary">Submit</button>
       </form>
